@@ -1,3 +1,8 @@
+2007-06-26  Christian Neumair  <cneumair@gnome.org>
+
+	* freedesktop.org.xml.in: Add OpenOffice MIME matchlets, fixes #11276.
+	Thanks to Matt Keenan <matt.keenan@sun.com>.
+
 2007-06-14  Christian Neumair  <cneumair@gnome.org>
 
 	* freedesktop.org.xml.in: Match "script" tag in HTML. Fixes #11259.
